--- a/config/realsense_d435i/realsense_stereo_imu_config.yaml
+++ b/config/realsense_d435i/realsense_stereo_imu_config.yaml
@@ -17,36 +17,36 @@ image_height: 480
    
 
 # Extrinsic parameter between IMU and Camera.
-estimate_extrinsic: 1   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
+estimate_extrinsic: 0   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
                         # 1  Have an initial guess about extrinsic parameters. We will optimize around your initial guess.
 
 body_T_cam0: !!opencv-matrix
    rows: 4
    cols: 4
    dt: d
-   data: [ -0.002538014705730, -0.004771656769321,
-        0.999985394779858, 0.017516767374782,
-       -0.999995024105970, 0.001885659948811,
-       -0.002529041291983, 0.002515677076421,
-       -0.001873564691332, -0.999986837702493,
-       -0.004776418858743, -0.012990637520534, 0., 0., 0., 1. ]
+   data: [ -5.7586305857286746e-03, -4.0463318787729019e-03,
+       9.9997523237933461e-01, 2.0329267950355900e-02,
+       -9.9998287214160420e-01, -1.0224590553211677e-03,
+       -5.7628118925283633e-03, 7.9325209639615653e-03,
+       1.0457519809151661e-03, -9.9999129084997906e-01,
+       -4.0403746097850135e-03, 2.8559824645148020e-03, 0., 0., 0., 1. ]
 
 body_T_cam1: !!opencv-matrix
    rows: 4
    cols: 4
    dt: d
-   data: [ 0.003537508638101, -0.005184144223730,
-       0.999980305146708, 0.017755710290865,
-       -0.999992511578506, 0.001550986978576,
-       0.003545592517856, -0.047148035626873,
-       -0.001569337295086, -0.999985359436857,
-       -0.005178618772839, -0.013036235394756, 0., 0., 0., 1. ]
+   data: [ -1.0021770212322867e-03, 3.6313480322730518e-04,
+       9.9999943188700535e-01, 1.5285779565991807e-02,
+       -9.9999216342926500e-01, -3.8303422615924010e-03,
+       -1.0007788055728661e-03, -5.2435791444330505e-02,
+       3.8299766679101843e-03, -9.9999259827824449e-01,
+       3.6697063849344680e-04, 8.6931302450199057e-03, 0., 0., 0., 1. ]
 
 #Multiple thread support
 multiple_thread: 1
 
 #feature traker paprameters
-max_cnt: 80            # max feature number in feature tracking
+max_cnt: 150            # max feature number in feature tracking
 min_dist: 30            # min distance between two features 
 freq: 10                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
@@ -62,8 +62,8 @@ keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 acc_n: 0.2          # accelerometer measurement noise standard deviation. #0.2   0.04
 gyr_n: 0.05         # gyroscope measurement noise standard deviation.     #0.05  0.004
 acc_w: 0.002         # accelerometer bias random work noise standard deviation.  #0.002
-gyr_w: 0.004       # gyroscope bias random work noise standard deviation.     #4.0e-5
-g_norm: 9.805         # gravity magnitude
+gyr_w: 0.0002       # gyroscope bias random work noise standard deviation.     #4.0e-5
+g_norm: 9.80         # gravity magnitude
 
 #unsynchronization parameters
 estimate_td: 1                      # online estimate time offset between camera and imu
