--- a/config/realsense_d435i/realsense_stereo_imu_config.yaml
+++ b/config/realsense_d435i/realsense_stereo_imu_config.yaml
@@ -61,7 +61,7 @@ keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 acc_n: 0.2          # accelerometer measurement noise standard deviation. #0.2   0.04
 gyr_n: 0.05         # gyroscope measurement noise standard deviation.     #0.05  0.004
 acc_w: 0.002         # accelerometer bias random work noise standard deviation.  #0.002
-gyr_w: 0.0004       # gyroscope bias random work noise standard deviation.     #4.0e-5
+gyr_w: 4.0e-5       # gyroscope bias random work noise standard deviation.     #4.0e-5
 g_norm: 9.805         # gravity magnitude
 
 #unsynchronization parameters
