--- a/config/realsense_d435i/realsense_stereo_imu_low_res_config.yaml
+++ b/config/realsense_d435i/realsense_stereo_imu_low_res_config.yaml
@@ -2,7 +2,7 @@
 
 #common parameters
 #support: 1 imu 1 cam; 1 imu 2 cam: 2 cam; 
-imu: 0         
+imu: 1         
 num_of_cam: 2  
 
 imu_topic: "/camera/imu"
@@ -10,14 +10,14 @@ image0_topic: "/camera/infra1/image_rect_raw"
 image1_topic: "/camera/infra2/image_rect_raw"
 output_path: "/home/jiahao/vins_output/"
 
-cam0_calib: "left.yaml"
-cam1_calib: "right.yaml"
-image_width: 640
-image_height: 480
+cam0_calib: "left_low_res.yaml"
+cam1_calib: "right_low_res.yaml"
+image_width: 424
+image_height: 240
    
 
 # Extrinsic parameter between IMU and Camera.
-estimate_extrinsic: 0   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
+estimate_extrinsic: 1   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
                         # 1  Have an initial guess about extrinsic parameters. We will optimize around your initial guess.
 
 body_T_cam0: !!opencv-matrix
