--- a/config/realsense_d435i/realsense_stereo_imu_low_res_new_config.yaml
+++ b/config/realsense_d435i/realsense_stereo_imu_low_res_new_config.yaml
@@ -24,32 +24,32 @@ body_T_cam0: !!opencv-matrix
    rows: 4
    cols: 4
    dt: d
-   data: [ -5.5893675906224516e-03, 6.5518100609671115e-03,
-       9.9996291568980789e-01, 1.7253397776115037e-02,
-       -9.9998401096292833e-01, -8.9497982778796725e-04,
-       -5.5836215489301622e-03, -1.4879314415269252e-02,
-       8.5836381023740582e-04, -9.9997813615900255e-01,
-       6.5567076750768782e-03, -3.7766121754649030e-02, 0., 0., 0., 1. ]
+   data: [ 9.3648385011557700e-04, -2.2897735740179392e-04,
+       9.9999953528357621e-01, 3.3896476904027736e-03,
+       -9.9998376004209222e-01, -5.6218401859569056e-03,
+       9.3518180214219315e-04, 3.5403015593858484e-03,
+       5.6216234379375951e-03, -9.9998417111587012e-01,
+       -2.3423840136138629e-04, -4.9680314885865206e-03, 0., 0., 0., 1. ]
 body_T_cam1: !!opencv-matrix
    rows: 4
    cols: 4
    dt: d
-   data: [ -2.0137111402547259e-03, 6.0001108535866488e-03,
-       9.9997997161802643e-01, 1.7746582616948264e-02,
-       -9.9999733965739079e-01, -1.1370736856113339e-03,
-       -2.0069234103591849e-03, -5.6753923247476683e-02,
-       1.1250091489279357e-03, -9.9998135269272836e-01,
-       6.0023846291836769e-03, -3.7196389392084778e-02, 0., 0., 0., 1. ]
+   data: [ 4.2268288429458956e-03, -7.5395068079714411e-04,
+       9.9999078269567221e-01, 3.7221307177284150e-03,
+       -9.9997578660622333e-01, -5.5313553780380609e-03,
+       4.2225950488653519e-03, -4.3631785645358967e-02,
+       5.5281207654404585e-03, -9.9998441771162250e-01,
+       -7.7731251754498132e-04, -4.6032473640364759e-03, 0., 0., 0., 1. ]
 
 #Multiple thread support
 multiple_thread: 1
 
 #feature traker paprameters
-max_cnt: 100            # max feature number in feature tracking
+max_cnt: 50            # max feature number in feature tracking
 min_dist: 30            # min distance between two features 
-freq: 10                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
+freq: 15                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
-show_track: 0           # publish tracking image as topic
+show_track: 1           # publish tracking image as topic
 flow_back: 1            # perform forward and backward optical flow to improve feature tracking accuracy
 
 #optimization parameters
@@ -58,15 +58,15 @@ max_num_iterations: 8   # max solver itrations, to guarantee real time
 keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 
 #imu parameters       The more accurate parameters you provide, the better performance
-acc_n: 0.2          # accelerometer measurement noise standard deviation. #0.2   0.04
-gyr_n: 0.05         # gyroscope measurement noise standard deviation.     #0.05  0.004
-acc_w: 0.002         # accelerometer bias random work noise standard deviation.  #0.002
-gyr_w: 4.0e-5       # gyroscope bias random work noise standard deviation.     #4.0e-5
+acc_n: 0.15          # accelerometer measurement noise standard deviation. #0.2   0.04
+gyr_n: 0.01         # gyroscope measurement noise standard deviation.     #0.05  0.004
+acc_w: 0.02         # accelerometer bias random work noise standard deviation.  #0.002
+gyr_w: 0.0015       # gyroscope bias random work noise standard deviation.     #4.0e-5
 g_norm: 9.806         # gravity magnitude
 
 #unsynchronization parameters
-estimate_td: 0                      # online estimate time offset between camera and imu
-td: 0.108484                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
+estimate_td: 1                      # online estimate time offset between camera and imu
+td: 0.006214                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
 
 #loop closure parameters
 load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
